# tokenomics

./: .gitignore  .pii-allowlist  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  check.sh  tokenomics.example.toml
.github/workflows/: ci.yml
docs/: SETUP.md
fixtures/: gemini_chats.json  gemini_chats.jsonl  gemini_chats_dedup.jsonl  gemini_chats_tool.jsonl  golden_accounts.toml  grok_unified.jsonl
rules/tools/: plans.md
specs/: 017-subscription-dates.md  018-verified-pill.md  019-zai-provider.md  020-gemini-provider.md  021-grok-provider.md  022-grok-weekly-quota.md  README.md
src/: collector.rs  config.rs  doctor.rs  domain.rs  ledger.rs  main.rs  store.rs
src/providers/: mod.rs
src/providers/claude/: mod.rs
src/providers/codex/: mod.rs
src/providers/gemini/: chats.rs  mod.rs
src/providers/grok/: billing.rs  logs.rs  mod.rs
src/providers/zai/: mod.rs  quota.rs
src/tui/: mod.rs  model.rs  view.rs
tests/: cli.rs  golden_cli.rs
tests/golden/: accounts.txt  once.json
